# testnet-rust

./: .gitignore  AGENTS.md  CMD.md  CODEBASE.md  Cargo.toml  DEPLOYMENT.md  GEMINI.md  README.md  SimpleNFT.sol  _clean_and_compile_all.bat  _start-risechain.ps1  _start-tempo-spammer.bat  _start.bat  abc.bat  check_factories.rs  check_fix.rs  check_hex.rs  check_token.rs  cli_check.bat  debug_report.md  diag.txt  extract_bytecode.rs  implementation.md  json-wallet-specification.md  package-lock.json  package.json  res23.txt  res36.txt  run_all.ps1  run_tests.ps1  task_summary.md  test_log.txt  verify_decryption.js
chains/evm-project/: Cargo.toml
chains/evm-project/src/: config.rs
chains/risechain/: Cargo.toml  config.toml  proxies.txt  recompile.rs
chains/risechain/contracts/: Counter.sol.hash  Counter_bytecode.txt  Impl.sol  Impl.sol.hash  Impl_abi.txt  Impl_bytecode.txt  MemeToken.sol  MemeToken.sol.hash  MemeToken_abi.txt  MemeToken_bytecode.txt  SimpleFactory.sol  SimpleFactory.sol.hash  SimpleFactory_abi.txt  SimpleFactory_bytecode.txt  TestERC1155.sol  TestERC1155.sol.hash  TestERC1155_abi.txt  TestERC1155_bytecode.txt  TestERC20Permit.sol  TestERC20Permit.sol.hash  TestERC20Permit_abi.txt  TestERC20Permit_bytecode.txt  TestNFT.sol  TestNFT.sol.hash  TestNFT_abi.txt  TestNFT_bytecode.txt  UUPSImpl.sol  UUPSImpl.sol.hash  UUPSImpl_abi.txt  UUPSImpl_bytecode.txt  bytecode.txt  compile.js
chains/risechain/docs/: 001_overview.md  002_network participant copy.md  003_continuous_block_pipeline.md  004_shreds.md  005_zk_fraud_proofs.md  006_data_availability.md  007_transaction_lifecycle.md  008_parallel_evm.md  009_based_sequencing.md  010_rise_token.md  011_faucet.md  012_testnet_1.md  013_using_metamask.md  014_rpc_endpoints.md  015_bridging.md  016_running_a_node.md  017_proposer.md  018_prover.md  019_smart_contracts_foundry.md  020_smart_contracts_hardhat.md  021_frontend_wagmi.md  022_frontend_ethers.md  023_frontend_viem.md  024_frontend_web3js.md  025_builders_ethers.md  026_builders_viem_read.md  027_builders_viem_write.md  028_builders_viem_verify.md  029_builders_viem_writing.md  COMPLETE_REFERENCE.md
chains/risechain/logs/: smart_main.log.2026-01-18
chains/risechain/reconstruct/: AnonymousEvent.sol  AssertFail.sol  CalldataSize.sol  CustomErrorTest.sol  GasStipend.sol  IndexedTopics.sol  LargeEventData.sol  MemoryExpansion.sol  RevertReason.sol  StoragePattern.sol  bytecode.txt  bytecode_t45.txt  bytecode_t46.txt  bytecode_t47.txt  bytecode_t48.txt  bytecode_t49.txt  bytecode_t50.txt  bytecode_t51.txt  bytecode_t52.txt  bytecode_t53.txt  compile.js  package-lock.json  package.json
chains/risechain/src/: config.rs  lib.rs  main.rs
chains/risechain/src/contracts/: mod.rs
chains/risechain/src/spammer/: mod.rs
chains/risechain/src/task/: check_code.rs  mod.rs  t01_check_balance.rs  t02_simple_eth_transfer.rs  t03_deploy_contract.rs  t04_interact_contract.rs  t05_self_transfer.rs  t06_send_meme.rs  t07_create_meme.rs  t09_weth_wrap.rs  t10_weth_unwrap.rs  t11_batch_transfer.rs  t12_nft_mint.rs  t13_nft_transfer.rs  t14_approve_token.rs  t16_multicall.rs  t17_read_oracle.rs  t18_contract_call_raw.rs  t19_high_gas_limit.rs  t20_gas_price_test.rs  t21_erc1155_mint.rs  t22_erc1155_transfer.rs  t23_timed_interaction.rs  t24_create2_deploy.rs  t25_message_sign.rs  t26_verify_signature.rs  t27_permit_token.rs  t28_delegatecall.rs  t29_cross_contract_call.rs  t30_revert_test.rs  t31_event_emission.rs  t32_eth_with_data.rs  t33_batch_approve.rs  t34_role_based_access.rs  t35_pausable_contract.rs  t36_create2_factory.rs  t37_uups_proxy.rs  t38_transparent_proxy.rs  t39_uniswap_v2_swap.rs  t40_erc4626_vault.rs  (+20 more)
chains/risechain/src/utils/: address_cache.rs  gas.rs  mod.rs  nonce_manager.rs  rate_limiter.rs  rpc_manager.rs
chains/solana-project/: Cargo.toml  config.toml
chains/tempo-alloy/: Cargo.toml  README.md
chains/tempo-alloy/apps/cli/: Cargo.toml
chains/tempo-alloy/config/: address.txt  config.toml  proxies.txt
chains/tempo-alloy/crates/client/: Cargo.toml
chains/tempo-alloy/crates/evm/: Cargo.toml
chains/tempo-alloy/crates/protocol/: Cargo.toml
chains/tempo-old/: .migrate-alloy.md  Cargo.toml  README.md  address.txt  build_err_solc.txt  check_error.txt  check_out.txt  check_output.txt  check_results.txt  config.toml  debug_out.txt  tokens.csv  workspace_check.txt
chains/tempo-old/_reference-nodejs DONOT USE THIS FOLDER/contracts/: TempoSplitter.sol
chains/tempo-old/cache/: solidity-files-cache.json
chains/tempo-old/contracts/: Counter.sol  MinimalNFT.sol  ViralNFT.sol  compile.js  package-lock.json  package.json
chains/tempo-old/docs/: 01-getting-started-2-network-details.md  01-getting-started-3-tools.md  02-core-protocol-3-blockspace.md  03-tokens-1-tip20-standard.md  03-tokens-3-policy.md  03-tokens-4-issuance-guide.md  03-tokens-5-payments-guide.md  05-wallet-integration-1-wallet-guide.md  05-wallet-integration-2-smart-accounts.md  06-sdk-rust.md
chains/tempo-old/src/: config.rs  lib.rs
chains/tempo-spammer/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MinimalNFT.abi  README.md  TODO.md  build.rs
chains/tempo-spammer/config/: config.toml  proxies.txt  proxies_new.txt
chains/tempo-spammer/docs/: ARCHITECTURE.md  CONFIG_REFERENCE.md  TASK_CATALOG.md  TASK_DEVELOPMENT.md  TESTING.md  TROUBLESHOOTING.md  t01_deploy_contract.md
chains/tempo-spammer/examples/: check_selector.rs
chains/tempo-spammer/logs/: app.2026-01-30-22
chains/tempo-spammer/src/: client.rs  client_pool.rs  config.rs  lib.rs  nonce_manager.rs  proxy_health.rs  robust_nonce_manager.rs
core-logic/: Cargo.toml
core-logic/src/: database.rs  error.rs  lib.rs  metrics.rs
core-logic/src/config/: mod.rs
core-logic/src/security/: mod.rs
core-logic/src/templates/: evm_adapter.rs  mod.rs
core-logic/src/traits/: mod.rs
core-logic/src/utils/: browser.rs  gas.rs  logger.rs  mod.rs  proxy_manager.rs  rate_limiter.rs  retry.rs  rpc_manager.rs  runner.rs  wallet_manager.rs
core-logic/tests/: config_test.rs  gas_manager_test.rs  retry_test.rs
(+968 files in other folders)
