[package]
name = "core-logic"
version = "0.1.0"
edition = "2021"

[features]
default = []
testing = []

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
aes-gcm = "0.9"
rand = "0.8"
dotenv = "0.15"
base64 = "0.22"
scrypt = "0.11"
hex = "0.4"
tracing-appender = "0.2"
chrono = "0.4"
nu-ansi-term = "0.46"
dialoguer = "0.11"
tokio-util = "0.7"
zeroize = { version = "1.7", features = ["derive"] }
smallvec = { version = "1.13", features = ["const_generics", "union"] }

[dev-dependencies]
ethers = { version = "2.0", features = ["rustls", "ws"] }
tempfile = "3.8"
