[package]
name = "evm-project"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = { version = "1.43", features = ["full"] }
ethers = { version = "2.0", features = ["rustls", "ws"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "socks"] }
config = "0.14"
tracing = "0.1"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
clap = { version = "4.5", features = ["derive"] }
tokio-util = "0.7"

[dependencies.core-logic]
path = "../../core-logic"
