[package]
name = "rise-project"
version = "0.1.0"
edition = "2021"
default-run = "rise-project"

[[bin]]
name = "rise-project"
path = "src/main.rs"

[lib]
name = "rise_project"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
tokio = { version = "1.43", features = ["full"] }
ethers = { version = "2.0", features = ["rustls", "ws"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "socks"] }
config = "0.14"
tracing = "0.1"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
dialoguer = "0.11"
tokio-util = "0.7"
futures = "0.3"
regex = "1"
colored = "2.0"
url = "2.5"
hex = "0.4"
base64 = "0.21"
once_cell = "1.19"

[dependencies.core-logic]
path = "../../core-logic"