[package]
name = "solana-project"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
solana-client = "1.18"
solana-sdk = "1.18"
anyhow = "1.0"
serde = { version = "=1.0.196", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "socks"] }
config = "0.14"
tracing = "0.1"
dotenv = "0.15"
clap = { version = "4.5", features = ["derive"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }

[dependencies.core-logic]
path = "../../core-logic"
