[package]
name = "tempo-alloy"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace]
members = [
    "apps/cli",
    "apps/debugger",
    "crates/client",
    "crates/protocol",
    "crates/evm",
]

[workspace.dependencies]
# Core Alloy
alloy = { version = "1.0", features = [
    "providers",
    "signers-local",
    "sol-types",
    "rpc-types-eth",
    "json-rpc",
    "ws",
] }
alloy-sol-macro = "1.0"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"
eyre = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Utilities
rand = "0.8"
hex = "0.4"
base64 = "0.22"
url = "2.5"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
tokio-util = "0.7"
futures = "0.3"
nu-ansi-term = "0.46"
colored = "2.0"
zeroize = { version = "1.7", features = ["derive"] }

# Protocol dependencies (from tempo/crates/primitives)
alloy-consensus = "1.0"
alloy-primitives = "0.7"
alloy-rlp = "1.0"
alloy-eips = "0.100"
alloy-genesis = "0.100"
alloy-evm = "0.1"
alloy-hardforks = "0.100"

# EVM dependencies
reth-chainspec = "0.3"
reth-network-peers = "0.3"
reth-evm = "0.3"
reth-evm-ethereum = "0.3"
reth-primitives-trait = "0.3"
reth-ethereum-primitives = "0.3"
