[package]
name = "tempo-project"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = { version = "1.43", features = ["full"] }
ethers = { version = "2.0", features = ["rustls", "ws", "abigen"] }
ethers-solc = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
dotenv = "0.15"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
dialoguer = "0.11"
tokio-util = "0.7"
futures = "0.3"
nu-ansi-term = "0.46"
colored = "2.0"
url = "2.5"
hex = "0.4"
base64 = "0.22"

[dependencies.core-logic]
path = "../../core-logic"

[[bin]]
name = "tempo-project"
path = "src/bin/tempo-project.rs"

[[bin]]
name = "debug_task"
path = "src/bin/debug_task.rs"

[[bin]]
name = "tempo-tester"
path = "src/bin/tempo-tester.rs"
