[package]
name = "tempo-evm"
description = "Tempo EVM implementation"

version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Local
tempo-protocol = { path = "../protocol" }

# Alloy dependencies
alloy-evm = { workspace = true }
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }

# Reth dependencies
reth-chainspec = { workspace = true }
reth-evm = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-primitives-trait = { workspace = true }

[features]
default = ["engine"]
engine = []
