[package]
name = "tempo-protocol"
description = "Tempo protocol types and transactions"

version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Alloy dependencies
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-eips = { workspace = true }
alloy-genesis = { workspace = true }
alloy-evm = { workspace = true }
alloy-hardforks = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

[features]
reth = [
    "alloy-primitives/log",
    "reth-ethereum-primitives",
    "reth-primitives-trait",
]
default = ["reth"]
