[package]
name = "tempo-commonware-node-config"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
publish = false

[dependencies]
commonware-codec = "0.0.65"
commonware-cryptography = "0.0.65"
const-hex = "1.0"
derive_more = { version = "2.0.0", features = ["debug"] }
thiserror = "1.0"

[dev-dependencies]
commonware-utils = "0.0.65"
rand = "0.8"
