[package]
name = "tempo-contracts"
description = "Tempo contracts"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
publish = false

[dependencies]
alloy-contract = { version = "1.4.3", default-features = false, optional = true }
alloy-primitives = { version = "1.5.0", default-features = false }
alloy-sol-types = { version = "1.4.3", default-features = false, features = ["json"] }

[dev-dependencies]
alloy-provider = { version = "1.4.3", default-features = false, features = ["reqwest", "reqwest-rustls-tls"] }
tokio = { version = "1.41", features = ["rt-multi-thread", "macros"] }

[features]
default = ["rpc"]
rpc = ["dep:alloy-contract"]
