[package]
name = "tempo-evm"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
publish = false

[dependencies]
tempo-chainspec = { path = "../chainspec" }
tempo-consensus = { path = "../consensus" }
tempo-payload-types = { path = "../payload/types", optional = true }
tempo-primitives = { path = "../primitives" }
tempo-revm = { path = "../revm" }

commonware-cryptography = "0.0.65"
commonware-codec = "0.0.65"

reth-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "f0c9cb9" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "f0c9cb9" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "f0c9cb9" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "f0c9cb9" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "f0c9cb9" }


rayon = { version = "1.10", optional = true }
alloy-rlp = "0.3"

alloy-consensus = { version = "0.5", default-features = false }
alloy-primitives = { version = "0.8", default-features = false }

derive_more = { version = "1.0", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]



[features]
default = ["rpc", "engine"]
rpc = ["tempo-revm/rpc", "tempo-primitives/serde"]
engine = ["dep:tempo-payload-types", "dep:rayon"]
