[package]
name = "tempo-node"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
publish = false

[dependencies]
tempo-alloy = { path = "../alloy", features = ["tempo-compat"] }
tempo-evm = { path = "../evm", features = ["rpc", "engine"] }
tempo-transaction-pool = { path = "../transaction-pool" }
tempo-chainspec = { path = "../chainspec" }
tempo-consensus = { path = "../consensus" }
tempo-payload-builder = { path = "../payload/builder" }
tempo-payload-types = { path = "../payload/types" }
tempo-precompiles = { path = "../precompiles" }
tempo-primitives = { path = "../primitives", features = ["default"] }

thiserror = "1.0"

reth-errors = { git = "https://github.com/paradigmxyz/reth", rev = "f0c9cb9" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "f0c9cb9", features = ["node", "rpc"] }

reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "f0c9cb9" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "f0c9cb9" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "f0c9cb9" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "f0c9cb9" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "f0c9cb9" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "f0c9cb9" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "f0c9cb9" }

reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "f0c9cb9" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", rev = "f0c9cb9" }
alloy-serde = { version = "1.4.3", default-features = false }
alloy-eips = { version = "1.4.3", default-features = false }
alloy-rpc-types-eth = { version = "1.4.3", default-features = false }
alloy = { version = "1.4.3", default-features = false }
alloy-primitives = { version = "1.5.0", default-features = false }

async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
eyre = "0.6"
futures = "0.3"
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
jsonrpsee = { version = "0.24", features = ["client", "server"] }

[dev-dependencies]
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "f0c9cb9", features = ["node", "test-utils", "pool"] }
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", rev = "f0c9cb9" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "f0c9cb9" }
reth-node-metrics = { git = "https://github.com/paradigmxyz/reth", rev = "f0c9cb9" }
tempo-e2e = { path = "../e2e" }
tempo-transaction-pool = { path = "../transaction-pool", features = ["test-utils"] }
alloy-network = { version = "1.4.3", default-features = false }
tempo-precompiles = { path = "../precompiles" }
alloy-rpc-types-engine = { version = "1.4.3", default-features = false }

serde_json = "1.0"
tempo-contracts = { path = "../contracts" }
tokio = { version = "1.41", features = ["rt", "rt-multi-thread", "macros"] }
alloy = { version = "1.4.3", features = [
    "full",
    "providers",
    "signers",
    "signer-mnemonic-all-languages",
] }
alloy-rlp = "0.3"
rand = "0.9.2"
futures = "0.3"
test-case = "3.3"
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
base64 = "0.22"

[build-dependencies]
vergen = { version = "8.3", features = ["build", "git", "git2"] }
vergen-git2 = "1.0"

[features]
default = []

