[package]
name = "tempo-precompiles-macros"
description = "Procedural macros for type-safe EVM storage abstractions, and better devex for interacting with EVM contracts"

version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
alloy = { version = "1.4.3" }

[dev-dependencies]
alloy = { version = "1.4.3" }
