[package]
name = "tempo-precompiles"
description = "TODO:"

version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
publish = false

[dependencies]
tempo-contracts = { path = "../contracts" }
tempo-chainspec = { path = "../chainspec" }
tempo-precompiles-macros = { path = "../precompiles-macros" }
alloy = { version = "1.4.3", features = ["sol-types", "consensus"] }



tracing = "0.1"
thiserror = "1.0"
derive_more = { version = "2.0.0", features = ["full"] }
scoped-tls = "1.0"

[dev-dependencies]
criterion = "0.5"
alloy-signer = { version = "1.4.3" }
alloy-signer-local = { version = "1.4.3" }
alloy-primitives = { version = "1.5.0", features = ["rand"] }
eyre = "0.6"
rand = "0.8"
proptest = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempo-evm = { path = "../evm" }

[features]
default = ["rpc"]
test-utils = ["alloy/getrandom"]
rpc = ["tempo-contracts/rpc"]

[[test]]
name = "storage"
required-features = ["test-utils"]

[[bench]]
name = "tempo_precompiles"
harness = false
required-features = ["test-utils"]
