[package]
name = "tempo-payload-types"

version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
publish = false

[dependencies]
tempo-primitives = { path = "../../primitives", features = ["reth-codec", "serde"] }

reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "f0c9cb9" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "f0c9cb9" }

alloy-primitives = { version = "1.5.0", default-features = false }
alloy-serde = { version = "1.4.3", default-features = false }
alloy-rpc-types-eth = { version = "1.4.3", default-features = false }
alloy-rpc-types-engine = { version = "1.4.3", default-features = false }

derive_more = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"